# LinuxApplicationDevelopment2021

./: .gitignore  LICENSE  README.md
03_Multifile/: Makefile
03_TerminalProject/: Show.c
04_Text/: randomize.sh
05_Debugging/: Makefile  range.c  test1  test2
06_TracingFencing/: Makefile  move.c  protect.c
07_Environmental/: README.md  meson.build  meson_options.txt  rhasher.c
07_Environmental/tests/: test_md5_hex.sh  test_sha1_base64.sh
08_Regexps/: esub.c  meson.build  test_1.sh  test_2.sh
10_I18n/: README.md  binsearch.c  meson.build
10_I18n/po/: POTFILES  meson.build  ru.po
11_Documenting/: README.md  meson.build  roman_binsearch.c
11_Documenting/docs/: Doc.md  Doxyfile  meson.build
11_Documenting/po/: POTFILES  meson.build  roman_binsearch.pot  ru.po
